--- a/style.css
+++ b/style.css
@@ -10,8 +10,11 @@
 
 body,
 header,
+footer,
+address,
 .profile-card,
-.about-me {
+.about-me,
+.contact-me {
   display: flex;
   flex-direction: column;
 }
@@ -30,6 +33,16 @@ h6 {
   font-family: 'Roboto', sans-serif;
 }
 
+h2 {
+  align-self: center;
+  font-size: 2.4rem;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 header {
   background: linear-gradient(
     160deg,
@@ -44,7 +57,8 @@ header {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.profile-card img {
+.profile-card img,
+footer img {
   display: block;
   margin: 0 auto;
   max-width: 100%;
@@ -65,13 +79,27 @@ header {
 }
 
 .about-me h2 {
-  align-self: center;
   color: var(--text-color-black);
-  font-size: 2.4rem;
 }
 
 .social-links {
   display: flex;
   justify-content: center;
   gap: 10px;
+}
+
+footer {
+  background-color: var(--background-color-blue);
+}
+
+.contact-me {
+  color: var(--text-color-white);
+  gap: 14px;
+  padding: 14px;
+  margin-bottom: 28px;
+}
+
+address {
+  font-style: normal;
+  gap: 14px;
 }
