--- a/style.css
+++ b/style.css
@@ -10,10 +10,13 @@
 
 body,
 header,
+main,
 footer,
 address,
 .profile-card,
 .about-me,
+.projects,
+.project-info,
 .contact-me {
   display: flex;
   flex-direction: column;
@@ -22,6 +25,7 @@ address,
 body {
   color: var(--text-color-grey);
   font-family: 'Playfair Display', serif;
+  font-weight: 300;
 }
 
 h1,
@@ -31,6 +35,7 @@ h4,
 h5,
 h6 {
   font-family: 'Roboto', sans-serif;
+  font-weight: 500;
 }
 
 h2 {
@@ -41,6 +46,7 @@ h2 {
 a {
   text-decoration: none;
   color: inherit;
+  cursor: pointer;
 }
 
 header {
@@ -52,12 +58,13 @@ header {
 }
 
 .profile-card {
-  margin: 16px;
+  margin: 18px;
   color: var(--text-color-white);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.1);
 }
 
 .profile-card img,
+.project img,
 footer img {
   display: block;
   margin: 0 auto;
@@ -78,7 +85,9 @@ footer img {
   gap: 10px;
 }
 
-.about-me h2 {
+.about-me h2,
+main h2,
+.project-info-top h3 {
   color: var(--text-color-black);
 }
 
@@ -86,6 +95,39 @@ footer img {
   display: flex;
   justify-content: center;
   gap: 10px;
+}
+
+main {
+  padding: 90px 0 110px;
+}
+
+.projects {
+  gap: 70px;
+}
+
+.project {
+  margin: 14px;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.1);
+}
+
+.project-info {
+  padding-bottom: 80px;
+}
+
+.project-info-top {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: space-between;
+  padding: 20px 20px 20px 30px;
+}
+
+.project-info-top h3 {
+  font-size: 1.4rem;
+}
+
+.project-info p {
+  padding: 0 30px 0 20px;
 }
 
 footer {
